<resources>
    <string name="app_name">Uplify</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="let_s_connect_n_with_each_other">Let\'s connect\nwith each other.</string>
    <string name="please_create_an_account_to_n_continue">Please create an account to\ncontinue!</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="icon_google">icon_google</string>
    <string name="or">or</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="arrow">arrow</string>
    <string name="create_an_account_so_you_can_explore_n_new_things">Create an account so you can explore\nnew things</string>
    <string name="your_name">Your Name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="reset_password">Reset Password!</string>
</resources>